@@ -21,11 +21,12 @@ public class Elite5MinAnalyzer {
 
         cleaner.scheduleAtFixedRate(() -> {
             long now = System.currentTimeMillis();
-            lastSignalTime.entrySet().removeIf(e -> now - e.getValue() > 30 * 60_000);
+            lastSignalTime.entrySet().removeIf(e -> now - e.getValue() > 20 * 60_000);
         }, 10, 10, TimeUnit.MINUTES);
     }
 
-    // ================== TRADE SIGNAL ==================
+    /* ================= TRADE SIGNAL ================= */
+
     public static class TradeSignal {
         public final String symbol;
         public final TradingCore.Side side;
@@ -33,78 +34,81 @@ public class Elite5MinAnalyzer {
         public final double stop;
         public final double take;
         public final String confidence;
+        public final String mode;
         public final String reason;
 
-        public TradeSignal(String symbol, TradingCore.Side side, double entry,
-                           double stop, double take, String confidence, String reason) {
+        public TradeSignal(String symbol, TradingCore.Side side,
+                           double entry, double stop, double take,
+                           String confidence, String mode, String reason) {
             this.symbol = symbol;
             this.side = side;
             this.entry = entry;
             this.stop = stop;
             this.take = take;
             this.confidence = confidence;
+            this.mode = mode;
             this.reason = reason;
-        }
-
-        @Override
-        public String toString() {
-            return String.format("%s → %s | Entry: %.5f Stop: %.5f Take: %.5f %s | %s",
-                    symbol, side, entry, stop, take, confidence, reason);
         }
     }
 
-    // ================== MAIN ANALYSIS ==================
+    /* ================= MAIN ================= */
+
     public List<TradeSignal> analyze(String symbol,
-                                     List<TradingCore.Candle> c5m,
-                                     List<TradingCore.Candle> c15m,
+                                     List<TradingCore.Candle> c5,
+                                     List<TradingCore.Candle> c15,
                                      List<TradingCore.Candle> c1h) {
 
-        if (c5m == null || c15m == null || c1h == null) return Collections.emptyList();
+        if (c5 == null || c15 == null || c1h == null) return List.of();
 
-        // Получаем идеи от DecisionEngineMerged
-        List<DecisionEngineMerged.TradeIdea> ideas = decisionEngine.evaluate(symbol, c5m, c15m, c1h);
-        if (ideas.isEmpty()) return Collections.emptyList();
+        List<DecisionEngineMerged.TradeIdea> ideas =
+                decisionEngine.evaluate(symbol, c5, c15, c1h);
 
-        // Определяем тренд по старшему таймфрейму
-        TradingCore.Side trend = determineTrend(c1h, c15m);
+        if (ideas.isEmpty()) return List.of();
 
+        TradingCore.Side htfTrend = detectTrend(c1h, c15);
         long now = System.currentTimeMillis();
-        long minInterval = dynamicSignalInterval(symbol);
-        if (lastSignalTime.containsKey(symbol) && now - lastSignalTime.get(symbol) < minInterval) {
-            return Collections.emptyList();
+
+        if (lastSignalTime.containsKey(symbol)
+                && now - lastSignalTime.get(symbol) < dynamicCooldown(symbol)) {
+            return List.of();
         }
 
-        // Сортировка идей по вероятности
         ideas.sort(Comparator.comparingDouble(i -> -i.probability));
 
         List<TradeSignal> result = new ArrayList<>();
 
         for (DecisionEngineMerged.TradeIdea idea : ideas) {
 
-            // Синхронизация с трендом
-            if (trend != null && idea.side != trend) continue; // отбрасываем сигналы против тренда
+            boolean counterTrend =
+                    htfTrend != null && idea.side != htfTrend;
 
-            double adjustedProb = brain.applyAllAdjustments("ELITE5", symbol, idea.probability);
+            TradeMode mode = classifyMode(idea, counterTrend);
 
-            if (adjustedProb < 0.50) continue;
+            double conf = brain.applyAllAdjustments("ELITE5", symbol, idea.probability);
 
-            RiskEngine.TradeSignal riskSig = riskEngine.applyRisk(
-                    idea.symbol, idea.side, idea.entry, idea.atr, adjustedProb, idea.reason
-            );
+            double minConf = switch (mode) {
+                case TREND -> 0.52;
+                case PULLBACK -> 0.55;
+                case REVERSAL -> 0.62;
+            };
 
-            TradeSignal ts = new TradeSignal(
+            if (conf < minConf) continue;
+
+            RiskEngine.TradeSignal r =
+                    riskEngine.applyRisk(idea, conf, mode);
+
+            result.add(new TradeSignal(
                     symbol,
                     idea.side,
-                    riskSig.entry,
-                    riskSig.stop,
-                    riskSig.take,
-                    mapConfidence(adjustedProb),
+                    r.entry,
+                    r.stop,
+                    r.take,
+                    mapConfidence(conf),
+                    mode.name(),
                     idea.reason
-            );
+            ));
 
-            result.add(ts);
-
-            if (result.size() >= dynamicMaxSignals()) break;
+            if (result.size() >= maxSignals()) break;
         }
 
         if (!result.isEmpty()) {
@@ -114,136 +118,122 @@ public class Elite5MinAnalyzer {
         return result;
     }
 
-    private TradingCore.Side determineTrend(List<TradingCore.Candle> c1h, List<TradingCore.Candle> c15m) {
-        // простой тренд по закрытию: UP, DOWN или null (flat)
-        double diffH = c1h.get(c1h.size() - 1).close - c1h.get(c1h.size() - 80).close;
-        if (diffH > 0.003 * c1h.get(c1h.size() - 80).close) return TradingCore.Side.LONG;
-        if (diffH < -0.003 * c1h.get(c1h.size() - 80).close) return TradingCore.Side.SHORT;
+    /* ================= MODE ================= */
 
-        double diff15 = c15m.get(c15m.size() - 1).close - c15m.get(c15m.size() - 80).close;
-        if (diff15 > 0.003 * c15m.get(c15m.size() - 80).close) return TradingCore.Side.LONG;
-        if (diff15 < -0.003 * c15m.get(c15m.size() - 80).close) return TradingCore.Side.SHORT;
-
-        return null; // flat
+    enum TradeMode {
+        TREND,
+        PULLBACK,
+        REVERSAL
     }
 
-    private String mapConfidence(double probability) {
-        if (probability >= 0.70) return "[S]";
-        if (probability >= 0.55) return "[M]";
-        return "[W]";
+    private TradeMode classifyMode(DecisionEngineMerged.TradeIdea idea, boolean counterTrend) {
+        if (idea.reason.contains("reversal")) return TradeMode.REVERSAL;
+        if (counterTrend) return TradeMode.REVERSAL;
+        if (idea.reason.contains("Pullback")) return TradeMode.PULLBACK;
+        return TradeMode.TREND;
     }
 
-    // ================== RISK ENGINE ==================
-    public static class RiskEngine {
+    /* ================= TREND ================= */
+
+    private TradingCore.Side detectTrend(List<TradingCore.Candle> c1h,
+                                         List<TradingCore.Candle> c15) {
+
+        double h = c1h.get(c1h.size() - 1).close
+                - c1h.get(c1h.size() - 80).close;
+
+        if (Math.abs(h) > 0.004 * c1h.get(c1h.size() - 80).close)
+            return h > 0 ? TradingCore.Side.LONG : TradingCore.Side.SHORT;
+
+        double m = c15.get(c15.size() - 1).close
+                - c15.get(c15.size() - 80).close;
+
+        if (Math.abs(m) > 0.003 * c15.get(c15.size() - 80).close)
+            return m > 0 ? TradingCore.Side.LONG : TradingCore.Side.SHORT;
+
+        return null;
+    }
+
+    /* ================= RISK ================= */
+
+    static class RiskEngine {
+
         private final double minRiskPct;
 
-        public RiskEngine(double minRiskPct) {
+        RiskEngine(double minRiskPct) {
             this.minRiskPct = minRiskPct;
         }
 
-        public static class TradeSignal {
-            public final String symbol;
-            public final double entry, stop, take;
-            public final double confidence;
-            public final String reason;
-
-            public TradeSignal(String symbol, double entry, double stop, double take,
-                               double confidence, String reason) {
-                this.symbol = symbol;
-                this.entry = entry;
-                this.stop = stop;
-                this.take = take;
-                this.confidence = confidence;
-                this.reason = reason;
+        static class TradeSignal {
+            double entry, stop, take;
+            TradeSignal(double e, double s, double t) {
+                entry = e; stop = s; take = t;
             }
         }
 
-        public TradeSignal applyRisk(String symbol, TradingCore.Side side,
-                                     double entry, double atr,
-                                     double confidence, String reason) {
+        TradeSignal applyRisk(DecisionEngineMerged.TradeIdea i,
+                              double conf, TradeMode mode) {
 
-            double riskMultiplier = confidence >= 0.65 ? 0.85 : 1.1;
-            double risk = atr * riskMultiplier;
-            double minRisk = entry * minRiskPct;
-            if (risk < minRisk) risk = minRisk;
+            double atr = i.atr;
+            double risk = Math.max(atr * 0.7, i.entry * minRiskPct);
 
-            double takeMultiplier = confidence >= 0.65 ? 2.8 : 2.2;
+            double tpMult = switch (mode) {
+                case TREND -> conf > 0.65 ? 3.0 : 2.6;
+                case PULLBACK -> 2.2;
+                case REVERSAL -> 1.4;
+            };
 
             double stop, take;
-            if (side == TradingCore.Side.LONG) {
-                stop = entry - risk;
-                take = entry + risk * takeMultiplier;
+            if (i.side == TradingCore.Side.LONG) {
+                stop = i.entry - risk;
+                take = i.entry + risk * tpMult;
             } else {
-                stop = entry + risk;
-                take = entry - risk * takeMultiplier;
+                stop = i.entry + risk;
+                take = i.entry - risk * tpMult;
             }
 
-            return new TradeSignal(symbol, entry, stop, take, confidence, reason);
+            return new TradeSignal(i.entry, stop, take);
         }
     }
 
-    // ================== ADAPTIVE BRAIN ==================
-    public static class AdaptiveBrain {
+    /* ================= BRAIN ================= */
 
-        private static class OutcomeStat { int wins = 0, losses = 0; }
+    static class AdaptiveBrain {
 
-        private final Map<String, OutcomeStat> stats = new ConcurrentHashMap<>();
-        private final Map<String, Deque<Long>> impulseHistory = new ConcurrentHashMap<>();
+        private final Map<String, Integer> streak = new ConcurrentHashMap<>();
 
-        public void recordOutcome(String strategy, boolean win) {
-            stats.putIfAbsent(strategy, new OutcomeStat());
-            OutcomeStat s = stats.get(strategy);
-            if (win) s.wins++;
-            else s.losses++;
-        }
+        double applyAllAdjustments(String strat, String pair, double base) {
 
-        private double winrate(String strategy) {
-            OutcomeStat s = stats.get(strategy);
-            if (s == null) return 0.5;
-            int total = s.wins + s.losses;
-            if (total < 20) return 0.5;
-            return (double) s.wins / total;
-        }
+            int s = streak.getOrDefault(pair, 0);
+            double adj = base;
 
-        private double adaptConfidence(String strategy, double baseConf) {
-            double wr = winrate(strategy);
-            if (wr > 0.60) return Math.min(0.90, baseConf + 0.06);
-            if (wr < 0.45) return Math.max(0.50, baseConf - 0.06);
-            return baseConf;
-        }
+            if (s >= 2) adj += 0.05;
+            if (s <= -2) adj -= 0.06;
 
-        private double impulsePenalty(String pair) {
-            impulseHistory.putIfAbsent(pair, new ConcurrentLinkedDeque<>());
-            Deque<Long> q = impulseHistory.get(pair);
-            long now = System.currentTimeMillis();
-            q.addLast(now);
-            while (!q.isEmpty() && now - q.peekFirst() > 20 * 60_000) q.pollFirst();
-            if (q.size() >= 3) return -0.08;
-            if (q.size() == 2) return -0.04;
-            return 0.0;
-        }
+            int h = LocalTime.now(ZoneOffset.UTC).getHour();
+            if (h >= 7 && h <= 17) adj += 0.04;
 
-        private double sessionBoost() {
-            int hour = LocalTime.now(ZoneOffset.UTC).getHour();
-            if ((hour >= 7 && hour < 11) || (hour >= 13 && hour < 17)) return 0.06;
-            return 0.0;
-        }
-
-        public double applyAllAdjustments(String strategy, String pair, double baseConf) {
-            double conf = adaptConfidence(strategy, baseConf);
-            conf += sessionBoost();
-            conf += impulsePenalty(pair);
-            return Math.max(0.45, Math.min(0.92, conf));
+            return Math.max(0.45, Math.min(0.92, adj));
         }
     }
 
-    private long dynamicSignalInterval(String symbol) { return 5 * 60_000; }
+    /* ================= UTILS ================= */
 
-    private int dynamicMaxSignals() {
-        int hour = LocalTime.now(ZoneOffset.UTC).getHour();
-        if ((hour >= 7 && hour < 11) || (hour >= 13 && hour < 17)) return 4;
-        return 3;
+    private long dynamicCooldown(String symbol) {
+        return 2 * 60_000;
     }
 
-    public void shutdown() { cleaner.shutdown(); }
+    private int maxSignals() {
+        int h = LocalTime.now(ZoneOffset.UTC).getHour();
+        return (h >= 7 && h <= 17) ? 4 : 3;
+    }
+
+    private String mapConfidence(double p) {
+        if (p >= 0.70) return "[S]";
+        if (p >= 0.58) return "[M]";
+        return "[W]";
+    }
+
+    public void shutdown() {
+        cleaner.shutdown();
+    }
 }
